cmake_minimum_required(VERSION 2.8.11)
project(zthread)
set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    add_definitions(-DZT_WIN32 -DUNICODE -D_UNICODE)
    set(CMAKE_CXX_FLAGS "/EHsc")
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    add_definitions(-DZT_POSIX -DHAVE_ATOMIC_LINUX)
    set(CMAKE_CXX_FLAGS "-fpermissive")
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(CMAKE_MACOSX_RPATH 1)
    add_definitions(-DZT_POSIX)
    set(CMAKE_CXX_FLAGS "-fpermissive")
else()
endif()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

include_directories(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(src)
add_subdirectory(tests)
